--- a/TaiJiQuan/app/build.gradle
+++ b/TaiJiQuan/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:support-v4:22.1.1'
     compile project(':library-viewpager-indicator')
+    compile 'net.simonvt.menudrawer:menudrawer:3.0.+@aar'
 }
